--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,22 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+
+    <style>
+      body {
+        margin: 0;
+        background-image: url('https://media.istockphoto.com/id/961849612/photo/yoga-woman-meditating-at-sunset.webp?b=1&s=170667a&w=0&k=20&c=sxHbcVhNMVnM2Rd0KJOY7nnLCooaa1iLF0D9KXKtC74='); /* Replace with the actual path or URL of your background image */
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed; /* Optional: Keeps the background fixed when scrolling */
+      }
+
+      #root {
+        /* Adjust styles for the content container if needed */
+        padding: 20px;
+      }
+    </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,7 +44,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" ></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
